# manufacturing-mcp-core

./: CONTRIBUTING.md  README.md  pyproject.toml
src/: __init__.py  client.py  protocol.py  server.py
