[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manufacturing-mcp"
version = "0.1.0"
description = "Manufacturing MCP Cluster - Unified interface for manufacturing AI Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Manufacturing AI Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Enterprise",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "cachetools>=5.3.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.6",
    "flake8>=6.1",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
]

[project.urls]
Homepage = "https://github.com/manufacturing-ai/mmc-core"
Documentation = "https://manufacturing-ai.github.io/mmc-docs/"
Repository = "https://github.com/manufacturing-ai/mmc-core"
Issues = "https://github.com/manufacturing-ai/mmc-core/issues"
Changelog = "https://github.com/manufacturing-ai/mmc-core/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"